src/code-block/styles.scss
@import "@servicenow/sass-kit/host";
@import "../../node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css";
@import "../../node_modules/prismjs/plugins/line-highlight/prism-line-highlight.css";

:host {
    display: block;
    box-shadow: rgba(0, 0, 0, 0.55) 0 8px 16px;
    border-radius: var(--now-code-block-radius, 7px);
    margin-bottom: 2em;
}

slot {
    display: none;
}

.code-block pre[class*="language-"] {
    border-bottom-left-radius: var(--now-code-block-radius, 7px);
    border-bottom-right-radius: var(--now-code-block-radius, 7px);
    margin-top: 0;
}

.code-header {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    padding-top: 1em;
    border-top-left-radius: var(--now-code-block-radius, 7px);
    border-top-right-radius: var(--now-code-block-radius, 7px);
}

.window-controls {
    position: absolute;
    left: 1em;
}

.code-block {
    position: relative;
}

.copy-button {
    position: absolute;
    top: 1em;
    right: 1em;
    z-index: 1;
    opacity: 0;
    transition: opacity 0.3s ease-in-out;
    &.is-disabled {
        display: none;
    }
}

.code-block:hover .copy-button {
    opacity: 1;
}

